src/objects/A__c.object
<CustomObject>
    <fields>
        <fullName>Just_To_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Just To Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>testPackageNames__c</fullName>
        <formula>IF( TEXT($User.testicklst__c) = &apos;GMS&apos;, &apos;GMS_Object_Name&apos;,  IF(TEXT($User.testicklst__c) = &apos;ServiceMax&apos;, &apos;ServiceMax_ObjectName&apos;, &apos;None Matched&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testPackageNames</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_ar_rich__c</fullName>
        <label>test ar rich</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>A</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>As</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>